facebook tag fixed using z-index

--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -2,8 +2,8 @@
 
 .topnav {
     float: left;
-    position:fixed: z-index:1;
-    top: 0;
+    position:fixed; z-index:1;
+    margin-top: 0px;
     /*margin:auto;*/
     margin-left: 0;
     left: 0;
@@ -40,7 +40,7 @@
 .social_b {
   float: right;
   top: 30;
-  position: fixed: z-index:2;
+  position: fixed; z-index:2;
 
 }
 
@@ -49,7 +49,6 @@
     margin-left: 1000px;
     font-size: 50px;
     width: 50px;
-    top: 30;
     text-decoration: none;
 }
 
@@ -118,12 +117,12 @@ input[type=submit] {
 
 /* Add a background color and some padding around the form */
 .container_2 {
-    position: fixed: z-index: 3;
+    position: fixed; z-index: 3;
     background-image: url(https://i.pinimg.com/564x/5d/30/ed/5d30ed0bf354b0d031f51e359f14cfa2.jpg);
     background-repeat: no-repeat;
-    background-size: 95%; height: 1500px;
+    background-size: 100%; height: 1000px;
     width: 100%;
-    top: 120;
+    margin-top: 50px;
     padding: 10px;
     overflow: hidden;
 }
